@@ -12,6 +12,7 @@ For a detailed view of what has changed, refer to the {uri-project}/commits/mast
 * fix handling of image paths with path separators
 * add support for image alignment. https://github.com/asciidoctor/asciidoctor-fb2/issues/16[#16]
 * add support for floating images
+* add naive admonition icons support. https://github.com/asciidoctor/asciidoctor-fb2/issues/18[#18]
 
 == 0.6.0 (2022-10-30) - @slonopotamus
 
